--- a/team.html
+++ b/team.html
@@ -64,7 +64,7 @@
                <div class="offcanvas-wrapper">
                   <div class="offcanvas-inner">
                      <a href="index.html" class="logo">
-                        <img src="images/logo/logoNew.png" alt="">
+                         <img src="images/logo/logoNew.png" alt="" style="max-width: 88px; height: 88px;">
                      </a>
                      <p align="left">Equipo creativo dedicado al diseño y desarrollo de páginas web personalizadas. Portafolios, Landing-page, e-comerce, catálogos y más.</p>
                      <div class="row">
@@ -147,7 +147,7 @@
          <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand tw-nav-brand" href="index.html">
-                        <img src="images/logo/logoNew.png" alt="seobin">
+                        <img src="images/logo/logoNew.png" alt="BUCKAPI"  style="max-width: 88px; height: 88px;">
                     </a>
                     <!-- End of Navbar Brand -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
