--- a/portafolios.html
+++ b/portafolios.html
@@ -79,7 +79,7 @@
                <div class="offcanvas-wrapper">
                   <div class="offcanvas-inner">
                      <a href="index.html" class="logo">
-                        <img src="images/logo/logoNew.png" alt="">
+                         <img src="images/logo/logoNew.png" alt="" style="max-width: 88px; height: 88px;">
                      </a>
                      <p align="justify">Equipo creativo dedicado al diseño y desarrollo de paginas web personalizadas. <br> Portafolios, Landing-page, e-comerce, e-learning, catalogos y más.</p>
                      <div class="row">
@@ -173,7 +173,7 @@
          <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand tw-nav-brand" href="index.html">
-                        <img src="images/logo/logoNew.png" alt="seobin">
+                        <img src="images/logo/logoNew.png" alt="BUCKAPI"  style="max-width: 88px; height: 88px;">
                     </a>
                     <!-- End of Navbar Brand -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
