--- a/equos.html
+++ b/equos.html
@@ -12,7 +12,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
    <!-- Site Title -->
-   <title>TuW3bSite | Desarrollo web</title>
+   <title>BUCKAPI | Desarrollo web</title>
    <meta name="description" content="Diseño y desarrollo web">
    <meta name="keywords" content="profesional, portfolio, Website, desing, developer, html, css, content, ecommerce, CMS">
 
@@ -78,8 +78,8 @@
             <div class="col-md-12">
                <div class="offcanvas-wrapper">
                   <div class="offcanvas-inner">
-                     <a href="index.html" class="logo">
-                        <img src="images/logo/logo.png" alt="">
+                      <a href="index.html" class="logo">
+                        <img src="images/logo/logoNew.png" alt="" style="max-width: 88px; height: 88px;">
                      </a>
                      <p align="justify">Equipo creativo dedicado al diseño y desarrollo de paginas web personalizadas. <br> Portafolios, Landing-page, e-comerce, e-learning, catalogos y más.</p>
                      <div class="row">
@@ -120,7 +120,7 @@
                               </div>
                               <!-- End contact Icon -->
                               <div class="contact-info">
-                                 <h3>info@tuw3bsite.com.ve</h3>
+                                 <h3>info@buckapi.com</h3>
                                  <p>24/7 Soporte</p>
                               </div>
                               <!-- End Contact Info -->
@@ -133,8 +133,8 @@
                      <div class="footer-social-link">
                         <ul>
                            <li><a href="https://wa.me/584147529202" target="_blanck"><i class="fa fa-whatsapp"></i></a></li>
-                            <li><a href="https://www.facebook.com/tuw3bsite" target="_blanck"><i class="fa fa-facebook"></i></a></li>
-                           <li><a href="https://www.instagram.com/tuw3bsite" target="_blanck"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/buckapi" target="_blanck"><i class="fa fa-facebook"></i></a></li>
+                           <li><a href="https://www.instagram.com/buckapi" target="_blanck"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                      </div>
                      <div class="menu-subscribe">
@@ -172,8 +172,8 @@
       <div class="tw-head ">
          <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand tw-nav-brand" href="index.html">
-                        <img src="images/logo/logo.png" alt="seobin">
+                     <a class="navbar-brand tw-nav-brand" href="index.html">
+                        <img src="images/logo/logoNew.png" alt="BUCKAPI"  style="max-width: 88px; height: 88px;">
                     </a>
                     <!-- End of Navbar Brand -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -415,10 +415,10 @@
                      Implementamos soluciones óptimas para tu sitio web.
                   </p>
                   <div class="footer-social-link">
-                     <h3>Sigenos en las RRSS</h3>
+                     <h3>Síguenos en las RRSS</h3>
                      <ul>
-                        <li><a href="https://www.facebook.com/tuw3bsite" target="_blanck"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/tuw3bsite" target="_blanck"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/buckapi" target="_blanck"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/buckapi" target="_blanck"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <!-- End Social link -->
@@ -426,7 +426,7 @@
                <!-- End Footer info -->
                <div class="footer-awarad">
                   <img src="images/icon/best.png" alt="">
-                  <p>TuW3bSite 2020</p>
+                  <p>Buckapi 2020</p>
                </div>
             </div>
             <!-- End Col -->
@@ -513,7 +513,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <span>Copyright &copy; 2020, Todos los derechos reservados tuw3bsite</span>
+                  <span>Copyright &copy; 2020, Todos los derechos reservados Buckapi</span>
                </div>
                <!-- End Col -->
                
@@ -532,7 +532,7 @@
    
       <!-- End Back to top -->
 
-         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20Tuw3bsite" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
+         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20Buckapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
          <i class="fa fa-whatsapp"></i>
          </a>
    </footer>
