--- a/medida.html
+++ b/medida.html
@@ -128,14 +128,14 @@
                         </div>
                         <!-- End Col -->
                         <div class="col-md-12">
-                           <a href="mailto:bucapi@gmail.com">
+                           <a href="mailto:buckapi@gmail.com">
                            <div class="contact-us">
                               <div class="contact-icon">
                                  <i class="icon icon-envelope2"></i>
                               </div>
                               <!-- End contact Icon -->
                               <div class="contact-info">
-                                 <h3>bucapi@gmail.com</h3>
+                                 <h3>buckapi@gmail.com</h3>
                                  <p>24/7 Soporte</p>
                               </div>
 
@@ -394,7 +394,7 @@
                            </div>
                            <!-- End contact Icon -->
                            <div class="contact-info">
-                              <h3>bucapi@gmail.com</h3>
+                              <h3>buckapi@gmail.com</h3>
                               <p>24/7 soporte</p>
                            </div>
                            <!-- End Contact Info -->
