--- a/contact.html
+++ b/contact.html
@@ -284,7 +284,7 @@
                      <i class="fa fa-phone"></i>
                      <p>+58 414 7529202</p>
                      <i class="fa fa-envelope"></i>
-                     <p>info@bucapi.com.ve</p>
+                     <p>info@buckapi.com</p>
                   </div>
                </div>
          </div>
