--- a/portafolios.html
+++ b/portafolios.html
@@ -120,7 +120,7 @@
                               </div>
                               <!-- End contact Icon -->
                               <div class="contact-info">
-                                 <h3>info@bucapi.com.ve</h3>
+                                 <h3>info@buckapi.com</h3>
                                  <p>24/7 Soporte</p>
                               </div>
                               <!-- End Contact Info -->
