--- a/admin.html
+++ b/admin.html
@@ -143,8 +143,8 @@
                      <div class="footer-social-link">
                         <ul>
                            <li><a href="https://wa.me/584147529202" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
-                           <li><a href="https://www.facebook.com/bucapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                           <li><a href="https://www.instagram.com/bucapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                           <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                           <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         </ul>
 
                      </div>
@@ -392,8 +392,8 @@
                   <div class="footer-social-link">
                      <h3>Síguenos en las RRSS</h3>
                      <ul>
-                        <li><a href="https://www.facebook.com/bucapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/bucapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <!-- End Social link -->
@@ -488,7 +488,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <span>Copyright &copy; 2020, Todos los derechos reservados bucapi</span>
+                  <span>Copyright &copy; 2020, Todos los derechos reservados buckapi</span>
                </div>
                <!-- End Col -->
                
@@ -507,7 +507,7 @@
    
       <!-- End Back to top -->
 
-         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20bucapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
+         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20buckapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
          <i class="fa fa-whatsapp"></i>
          </a>
    </footer>
