--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                      <div class="footer-social-link">
                         <ul>
                            <li><a href="https://wa.me/584147529202" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
-                           <li><a href="https://www.facebook.com/bucapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                           <li><a href="https://www.instagram.com/bucapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                           <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                           <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         </ul>
 
                      </div>
@@ -280,7 +280,7 @@
                            <span>PWA</span>
                            </h1>
                            <p>Explote lo mejor de la web y del móvil</p>
-                           <a href="https://wa.me/584147529202?text=Desarrollo!!%20a%20medida20%bucapi" target="_blank"  class="btn btn-primary">Más información</a>
+                           <a href="https://wa.me/584147529202?text=Desarrollo!!%20a%20medida20%buckapi" target="_blank"  class="btn btn-primary">Más información</a>
                         </div>
                      </div>
                      <div class="col-md-5 align-self-center">
@@ -588,7 +588,7 @@
                         </div> -->
                         <div class="col-lg-4 col-md-12 no-padding">
                            <div class="form-group">
-                             <!--  <input type="submit"  href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20bucapi" target="_blank" title="Hablemos por whatsapp !"value="Solicitala ahora"> -->
+                             <!--  <input type="submit"  href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20buckapi" target="_blank" title="Hablemos por whatsapp !"value="Solicitala ahora"> -->
 
                            <a href="https://wa.me/584147529202?text=Demo" target="_blank"  class="btn btn-dark">Pídala ahora</a>
                            </div>
@@ -746,8 +746,8 @@
                   <div class="footer-social-link">
                      <h3>Síguenos en las RRSS</h3>
                      <ul>
-                        <li><a href="https://www.facebook.com/bucapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/bucapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <!-- End Social link -->
@@ -822,7 +822,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <span>Copyright &copy; 2020, Todos los derechos reservados bucapi</span>
+                  <span>Copyright &copy; 2020, Todos los derechos reservados buckapi</span>
                </div>
                <!-- End Col -->
                
@@ -841,7 +841,7 @@
    
       <!-- End Back to top -->
 
-         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20bucapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
+         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20buckapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
          <i class="fa fa-whatsapp"></i>
          </a>
    </footer>
