--- a/medida.html
+++ b/medida.html
@@ -151,8 +151,8 @@
                      <div class="footer-social-link">
                         <ul>
                            <li><a href="https://wa.me/584147529202" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
-                           <li><a href="https://www.facebook.com/bucapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                           <li><a href="https://www.instagram.com/bucapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                           <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                           <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         </ul>
 
                      </div>
@@ -268,7 +268,7 @@
                   <h3>Sitios web a medida</h3>
                   <span class="bottom-border tw-mt-20 tw-mb-30"></span>
                   <p>
-                     Es el desarrollo de software que ofrece soluciones para la optimización y sistematización de procesos y operaciones de una empresa.<br> En bucapi nos encargamos de poner en marcha su proyecto, utilizamos tecnólogia de última generación que aportan robustez, arquitectura segura y escalable, confiabilidad y disponibilidad. Entre ellos ofrecemos sistemas cloud, aplicaciones web y aplicaciones Web Progresivas.
+                     Es el desarrollo de software que ofrece soluciones para la optimización y sistematización de procesos y operaciones de una empresa.<br> En buckapi nos encargamos de poner en marcha su proyecto, utilizamos tecnólogia de última generación que aportan robustez, arquitectura segura y escalable, confiabilidad y disponibilidad. Entre ellos ofrecemos sistemas cloud, aplicaciones web y aplicaciones Web Progresivas.
                </div>
                <!-- Analytics Content End -->
             </div>
@@ -465,8 +465,8 @@
                   <div class="footer-social-link">
                      <h3>Síguenos en las RRSS</h3>
                      <ul>
-                        <li><a href="https://www.facebook.com/bucapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/bucapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <!-- End Social link -->
@@ -561,7 +561,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <span>Copyright &copy; 2020, Todos los derechos reservados bucapi</span>
+                  <span>Copyright &copy; 2020, Todos los derechos reservados buckapi</span>
                </div>
                <!-- End Col -->
                
@@ -580,7 +580,7 @@
    
       <!-- End Back to top -->
 
-         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20bucapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
+         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20buckapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
          <i class="fa fa-whatsapp"></i>
          </a>
    </footer>
