--- a/team.html
+++ b/team.html
@@ -292,7 +292,7 @@
                      <h3 class="team-name">Francisco Zambrano</h3>
                      <p class="team-designation">Diseñador gráfico</p>
                      <div class="team-social-links">
-                        <a href="http://www.francoazm.com" target="_blank" title="Portafolio"><i class="fa fa-cloud"></i></a>
+                        <a href="/francoazm" target="_blank" title="Portafolio"><i class="fa fa-cloud"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=1053438208" target="_blank"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/francozm/?hl=es-la" target="_blank"><i class="fa fa-instagram"></i></a>
                      </div>
