--- a/team.html
+++ b/team.html
@@ -471,7 +471,7 @@
                <!-- End Footer info -->
                <div class="footer-awarad">
                   <img src="images/icon/best.png" alt="">
-                  <p>BUCKAPI 2020</p>
+                  <p>BUCKAPI 2016-2021</p>
                </div>
             </div>
             <!-- End Col -->
