--- a/sohigh.html
+++ b/sohigh.html
@@ -413,7 +413,7 @@
                <!-- End Footer info -->
                <div class="footer-awarad">
                   <img src="images/icon/best.png" alt="">
-                  <p>Buckapi 2020</p>
+                  <p>BUCKAPI 2016-2021</p>
                </div>
             </div>
             <!-- End Col -->
