--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<!--Start Header -->
-	<header class="header-pr nav-bg-w main-header navfix fixed-top menu-white">
+	<header class="header-pr nav-bg-w main-header  fixed-top menu-white">
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo"><a class="nav-brand" href="../index.html">
@@ -82,7 +82,7 @@
 	</div>
 </div>
 			<!--Mobile Menu-->
-			<!-- <nav id="main-nav">
+			<nav id="main-nav">
 				<ul class="first-nav">
 					<li><a href="../index.html" class="menu-links">Inicio</a>
 						</li>
@@ -145,21 +145,21 @@
 						</a>
 					</li>
 				</ul>
-			</nav> -->
+			</nav>
 		</div>
 
-</header>
+	</header>
 <!--Mobile contact-->
-<div class="popup-modal1">
+<!-- <div class="popup-modal1">
 <div class="modal" id="menu-popup">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
 <div class="common-heading">
-<h4 class="mt0 mb0">Write a Message</h4>
+<h4 class="mt0 mb0">Escribir mensaje</h4>
 </div>
 <button type="button" class="closes" data-dismiss="modal">&times;</button></div>
-<!-- Modal body -->
+
 <div class="modal-body">
 <div class="form-block fdgn2 mt10 mb10">
 <form action="#" method="post" name="feedback-form">
@@ -179,12 +179,8 @@
 </div>
 </div>
 </div>
-</div>
-<!--Mobile contact-->
-<!--End Header -->
-<!--Breadcrumb Area-->
+</div> -->
 
-<!--End Breadcrumb Area-->
 <!--Start Portfolio-->
 <section class="portfolio-page pad-tb">
 <div class="container">
@@ -225,7 +221,7 @@
 			</div>
 			<div class="item-info">
 			<h4><a href="https://www.penguinscleaning.ca" target="_blanck">Penguins cleaning</a></h4>
-			<p>PWA, pagina empresarial</p>
+			<p>PWA, pagina empresarial, ecommerce</p>
 			</div>
 			</div>
 		</div>
@@ -235,77 +231,110 @@
 			<a href="https://www.buckapi.com/imdris" target="_blanck"><img src="images/portfolio/image-3.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="#">Imdris</a></h4>
+			<h4><a href="https://www.imdris.org" target="_blanck">Imdris</a></h4>
 			<p>Pagina web</p>
 			</div>
 			</div>
 		</div>
-<div class="col-lg-4 col-sm-6 single-card-item website">
-<div class="isotope_item hover-scale">
-<div class="item-image">
-<a href="#"><img src="images/portfolio/image-4.jpg" alt="image" class="img-fluid"/> </a>
-</div>
-<div class="item-info">
-<h4><a href="#">Ventiluz-Servicios</a></h4>
-<p>Pagina web</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 single-card-item website">
-<div class="isotope_item hover-scale">
-<div class="item-image">
-<a href="#"><img src="images/portfolio/image-5.jpg" alt="image" class="img-fluid"/> </a>
-</div>
-<div class="item-info">
-<h4><a href="http://www.aleña.cl" target="_blanck">Aleña</a></h4>
-<p>Pagina web</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 single-card-item app">
-<div class="isotope_item hover-scale">
-<div class="item-image">
-<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
-</div>
-<div class="item-info">
-<h4><a href="https://www.techosytabiquesmerida.com" target="_blanck">Techos y tabiques Mérida</a></h4>
-<p>PWA, E-commerce</p>
-</div>
-</div>
-</div>
-<!-- <div class="col-lg-4 col-sm-6 single-card-item website">
-<div class="isotope_item hover-scale">
-<div class="item-image">
-<a href="#"><img src="images/portfolio/image-7.jpg" alt="image" class="img-fluid"/> </a>
-</div>
-<div class="item-info">
-<h4><a href="https://www.buckapi.com/andespro" >Andes pro adventures</a></h4>
-<p>Pagina web</p>
-</div>
-</div>
-</div> -->
-<div class="col-lg-4 col-sm-6 single-card-item app">
-<div class="isotope_item hover-scale">
-<div class="item-image">
-<a href="#"><img src="images/portfolio/image-8.jpg" alt="image" class="img-fluid"/> </a>
-</div>
-<div class="item-info">
-<h4><a href="#">Restaurant App</a></h4>
-<p>Android App</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-sm-6 single-card-item  website">
-<div class="isotope_item hover-scale">
-<div class="item-image">
-<a href="#"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
-</div>
-<div class="item-info">
-<h4><a href="#">Portfolio Website</a></h4>
-<p>Web Design</p>
-</div>
-</div>
-</div>
+		<div class="col-lg-4 col-sm-6 single-card-item website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-4.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="#" target="_blanck">Ventiluz-Servicios</a></h4>
+			<p>Pagina web</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="alena.html"><img src="images/portfolio/image-5.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="http://www.aleña.cl" target="_blanck">Aleña</a></h4>
+			<p>Pagina web</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item app">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="https://www.techosytabiquesmerida.com" target="_blanck">Techos y tabiques Mérida</a></h4>
+			<p>PWA, E-commerce</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item app">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="https://www.mentamarvzla.com" target="_blanck">Menta Mar Vzla</a></h4>
+			<p>PWA, E-commerce</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item app">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="#" target="_blanck">Acrilicos Merida</a></h4>
+			<p>PWA, E-commerce</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-7.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="https://www.zanitizing.mx" target="_blanck">Zanitizing</a></h4>
+			<p>Pagina web</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-8.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="htps://www.planningltda.cl" target="_blanck">PlanningLTDA</a></h4>
+			<p>Pagina web Portafolio profesional</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item  website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#" target="_blanck"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="#">JKDRotulación</a></h4>
+			<p>Pagina web</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item  website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="https://www.buckapi.com/Francoazm" target="_blanck">Francoazm</a></h4>
+			<p>Pagina web Portafolio profesional</p>
+			</div>
+			</div>
+		</div>
 </div>
 </div>
 </section>
