--- a/shops/index.html
+++ b/shops/index.html
@@ -10,7 +10,7 @@
         <meta name="keywords" content="profesional, portfolio, Website, desing, developer, html, css, content, ecommerce, CMS"> 
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://static.tildacdn.com/tild6235-3762-4239-b931-333130336639/illustration_main.jpg"/>
-        <link rel="canonical" href="#">
+        
         <!--/metatextblock-->
         <meta property="fb:app_id" content="257953674358265"/>
         <meta name="format-detection" content="telephone=no"/>
@@ -205,7 +205,7 @@
                                 <div class="t228__right_buttons">
                                     <div class="t228__right_buttons_wrap">
                                         <div class="t228__right_buttons_but">
-                                            <a href="#uximprove" target="" class="t-btn " style="color:#ffffff;background-color:#000000;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
+                                            <a class="t-btn " style="color:#ffffff;background-color:#000000;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                                                 <table style="width:100%; height:100%;">
                                                     <tr>
                                                         <td>Diseñemos su tienda virtual ahora!</td>
@@ -363,7 +363,7 @@
                                 <div class="t450__right_buttons">
                                     <div class="t450__right_buttons_wrap">
                                         <div class="t450__right_buttons_but ">
-                                            <a href="#uximprove" target="" class="t-btn " style="color:#ffffff;background-color:#000000;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
+                                            <a class="t-btn " style="color:#ffffff;background-color:#000000;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                                                 <table style="width:100%; height:100%;">
                                                     <tr>
                                                         <td>Diseñemos su tienda virtual ahora!</td>
@@ -862,7 +862,7 @@
                             </div>
                         </div>
                         <div class='t396__elem tn-elem tn-elem__1204657731565239005475' data-elem-id='1565239005475' data-elem-type='button' data-field-top-value="514" data-field-top-res-960-value="510" data-field-top-res-640-value="370" data-field-top-res-480-value="408" data-field-top-res-320-value="389" data-field-left-value="20" data-field-left-res-960-value="10" data-field-left-res-640-value="140" data-field-left-res-480-value="60" data-field-left-res-320-value="25" data-field-height-value="60" data-field-height-res-320-value="40" data-field-width-value="360" data-field-width-res-320-value="270" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-                            <a class='tn-atom' href="#">Disenemos su tienda ahora!</a>
+                            <a class='tn-atom'>Disenemos su tienda ahora!</a>
                         </div>
                     </div>
                 </div>
@@ -946,7 +946,7 @@
                     <div class="t-container_100">
                         <div class="t694__row">
                             <div class="t694__col t-cell t-cell_50 t-align_center t694__show_hover">
-                                <a href="http://tuw3bite.com" target="">
+                                <a href="https://www.buckapi.com" target="_blank">
                                     <div class="t694__table">
                                         <div class="t694__cell t-align_center t-valign_middle">
                                             <div class="t694__bg t694__animation_fast t-bgimg" bgimgfield="li_img__1495528759247" data-original="https://static.tildacdn.com/tild6530-3535-4138-b834-313863653133/Easydev_promo.jpg" style="background-image:url('https://static.tildacdn.com/tild6530-3535-4138-b834-313863653133/-/resizeb/20x/Easydev_promo.jpg');"></div>
@@ -964,7 +964,7 @@
                                 </a>
                             </div>
                             <div class="t694__col t-cell t-cell_50 t-align_center t694__show_hover">
-                                <a href="#" target="">
+                                <a>
                                     <div class="t694__table">
                                         <div class="t694__cell t-align_center t-valign_middle">
                                             <div class="t694__bg t694__animation_fast t-bgimg" bgimgfield="li_img__1566555227790" data-original="assets/img/galeria.jpg" style="background-image:url('assets/img/galeria.jpg');"></div>
@@ -2028,13 +2028,13 @@
                                 <br>
                                 <strong>
                                     <span data-redactor-tag="span" style="color: rgb(249, 5, 124);">
-                                        <a href="#" style="">Ver tienda</a>
+                                        <a>Ver tienda</a>
                                     </span>
                                 </strong>
                             </div>
                         </div>
                         <div class='t396__elem tn-elem tn-elem__685512261537080971301 t-animate' data-elem-id='1537080971301' data-elem-type='text' data-field-top-value="190" data-field-top-res-960-value="190" data-field-top-res-640-value="120" data-field-top-res-480-value="120" data-field-top-res-320-value="120" data-field-left-value="620" data-field-left-res-960-value="490" data-field-left-res-640-value="90" data-field-left-res-480-value="90" data-field-left-res-320-value="10" data-field-width-value="560" data-field-width-res-960-value="460" data-field-width-res-640-value="460" data-field-width-res-480-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="" data-animate-style="fadeinup" data-animate-duration="1" data-animate-distance="300" data-animate-trigger-offset="50">
-                            <a class='tn-atom' href="#">Tiendas en linea</a>
+                            <a class='tn-atom' >Tiendas en linea</a>
                         </div>
                         <div class='t396__elem tn-elem tn-elem__685512261537084226378' data-elem-id='1537084226378' data-elem-type='shape' data-field-top-value="56" data-field-top-res-960-value="53" data-field-top-res-640-value="42" data-field-top-res-480-value="42" data-field-top-res-320-value="42" data-field-left-value="1078" data-field-left-res-960-value="887" data-field-left-res-640-value="599" data-field-left-res-480-value="421" data-field-left-res-320-value="301" data-field-height-value="80" data-field-width-value="80" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
                             <div class='tn-atom'></div>
@@ -2726,7 +2726,7 @@
                                 <br>
                                 <strong>
                                     <span data-redactor-tag="span" style="color: rgb(249, 5, 124);">
-                                        <a href="#" style="">Learn more</a>
+                                        <a style="">Solicitar</a>
                                     </span>
                                 </strong>
                             </div>
@@ -8332,7 +8332,7 @@
                         <div class="t396__filter" data-artboard-recid="68612529"></div>
                         <div class='t396__elem tn-elem tn-elem__686125291470210011265 t-animate' data-elem-id='1470210011265' data-elem-type='text' data-field-top-value="360" data-field-top-res-960-value="400" data-field-top-res-640-value="260" data-field-top-res-480-value="220" data-field-top-res-320-value="200" data-field-left-value="20" data-field-left-res-960-value="10" data-field-left-res-640-value="90" data-field-left-res-480-value="90" data-field-left-res-320-value="10" data-field-width-value="560" data-field-width-res-960-value="460" data-field-width-res-640-value="460" data-field-width-res-480-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="" data-animate-style="fadein" data-animate-duration="1" data-animate-delay="0.8">
                             <div class='tn-atom' field='tn_text_1470210011265'>
-                                <span style="color: rgb(66, 72, 102);">Apps adaptadas a la web y a tu movil, facil, sencillo y confiable</span>
+                                <span style="color: rgb(66, 72, 102);">Apps adaptadas a la web y a tu movil. Son perfectamnte instables faciles de usar, sencillas de manejar y confiable</span>
                                 <br>
                                 <br>
                                 <strong>
@@ -8349,7 +8349,7 @@
                             </div>
                         </div>
                         <div class='t396__elem tn-elem tn-elem__686125291537080971301 t-animate' data-elem-id='1537080971301' data-elem-type='text' data-field-top-value="260" data-field-top-res-960-value="240" data-field-top-res-640-value="100" data-field-top-res-480-value="100" data-field-top-res-320-value="80" data-field-left-value="20" data-field-left-res-960-value="10" data-field-left-res-640-value="90" data-field-left-res-480-value="90" data-field-left-res-320-value="10" data-field-width-value="560" data-field-width-res-960-value="460" data-field-width-res-640-value="460" data-field-width-res-480-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="" data-animate-style="fadeinup" data-animate-duration="1" data-animate-distance="300" data-animate-trigger-offset="50">
-                            <a class='tn-atom' href="#">Aplicaciones web progresivas</a>
+                           <a>Aplicaciones web progresivas</a> 
                         </div>
                         <div class='t396__elem tn-elem tn-elem__686125291537084226378' data-elem-id='1537084226378' data-elem-type='shape' data-field-top-value="518" data-field-top-res-960-value="584" data-field-top-res-640-value="436" data-field-top-res-480-value="453" data-field-top-res-320-value="438" data-field-left-value="445" data-field-left-res-960-value="346" data-field-left-res-640-value="537" data-field-left-res-480-value="425" data-field-left-res-320-value="301" data-field-height-value="80" data-field-height-res-320-value="60" data-field-width-value="80" data-field-width-res-320-value="60" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="" data-animate-prx="mouse" data-animate-prx-dx="5" data-animate-prx-dy="5">
                             <div class='tn-atom'></div>
@@ -9079,7 +9079,7 @@
                         <div class="t396__carrier" data-artboard-recid="75255287"></div>
                         <div class="t396__filter" data-artboard-recid="75255287"></div>
                         <div class='t396__elem tn-elem tn-elem__752552871470210011265 t-animate' data-elem-id='1470210011265' data-elem-type='text' data-field-top-value="380" data-field-top-res-960-value="400" data-field-top-res-640-value="280" data-field-top-res-480-value="250" data-field-top-res-320-value="250" data-field-left-value="620" data-field-left-res-960-value="490" data-field-left-res-640-value="90" data-field-left-res-480-value="90" data-field-left-res-320-value="10" data-field-width-value="560" data-field-width-res-960-value="460" data-field-width-res-640-value="460" data-field-width-res-480-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="" data-animate-style="fadein" data-animate-duration="1" data-animate-delay="0.8">
-                            <div class='tn-atom' field='tn_text_1470210011265'>
+                            <!-- <div class='tn-atom' field='tn_text_1470210011265'>
                                 <span style="color: rgb(66, 72, 102);">The use of maps and geolocation isn't a new trend in today's digital projects, but advances in technology have led to interactive experiences improving considerably with mobile phone.</span>
                                 <br>
                                 <br>
@@ -9088,10 +9088,10 @@
                                         <a href="#" style="">Learn more</a>
                                     </span>
                                 </strong>
-                            </div>
+                            </div> -->
                         </div>
                         <div class='t396__elem tn-elem tn-elem__752552871537080971301 t-animate' data-elem-id='1537080971301' data-elem-type='text' data-field-top-value="280" data-field-top-res-960-value="250" data-field-top-res-640-value="130" data-field-top-res-480-value="120" data-field-top-res-320-value="120" data-field-left-value="620" data-field-left-res-960-value="490" data-field-left-res-640-value="90" data-field-left-res-480-value="90" data-field-left-res-320-value="10" data-field-width-value="560" data-field-width-res-960-value="460" data-field-width-res-640-value="460" data-field-width-res-480-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="" data-animate-style="fadeinup" data-animate-duration="1" data-animate-distance="300" data-animate-trigger-offset="50">
-                            <a class='tn-atom' href="#">Mobile interactive map</a>
+                            
                         </div>
                         <div class='t396__elem tn-elem tn-elem__752552871537084226378' data-elem-id='1537084226378' data-elem-type='shape' data-field-top-value="452" data-field-top-res-960-value="457" data-field-top-res-640-value="252" data-field-top-res-480-value="203" data-field-top-res-320-value="253" data-field-left-value="1184" data-field-left-res-960-value="948" data-field-left-res-640-value="601" data-field-left-res-480-value="440" data-field-left-res-320-value="369" data-field-height-value="70" data-field-width-value="70" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
                             <div class='tn-atom'></div>
